2017-08-28         [RELEASE] Release of t3calendar 0.5.0 (Dirk Wenzel)
2017-08-05 7380791 [TASK][BREAKING] CalendarDay refactored. All occurrences of `calendarDay.isCurrent` in templates and partials where changed to `calendarDay.current` too. Make sure to adapt your custom templates! (Dirk Wenzel)
2017-08-05 4fdadff [TASK] coding guidelines (Dirk Wenzel)
2017-08-05 80db672 [TASK] CalendarDayFactory, CalendarDay, CalendarQuarter, CalendarYear, TemplateUtility refactored. (Dirk Wenzel)

2017-07-12         [RELEASE] Release of t3calendar 0.4.1 (Dirk Wenzel)
2017-07-12 62ff4f0 [BUGFIX] version number corrected. (Dirk Wenzel)
2017-06-23 3d2a385 [TASK] coding guidelines (Dirk Wenzel)

2017-05-12         [RELEASE] Release of t3calendar 0.4.1 (Dirk Wenzel)
2017-05-12 08abc8a [BUGFIX] fixed error which caused calendar items with end date being visible before their start date. (Dirk Wenzel)

2017-05-05         [RELEASE] Release of t3calendar 0.4.0 (Dirk Wenzel)
2017-05-05 9051f3d [BUGFIX] errors in unit test fixed (Dirk Wenzel)
2017-05-05 3c52151 [TASK] CalendarViewHelper now has an optional argument  ‘parameters’ of type array. Default templates adapted. (Dirk Wenzel)
2017-04-28 963aad0 [TASK] composer.json: obsolete settings removed. (Dirk Wenzel)
2017-04-28 759caab [BUGFIX] CalendarViewHelper: fixed issue caused by different implementation of AbstractWidgetViewHelper throughout TYPO3 versions. (Don't call parent::initializeArguments). (Dirk Wenzel)
2017-04-27 2a3ec3e [TASK] CalendarViewHelper refactored: register arguments explicitly. Allow passing an array as configuration. CalendarContoller now generates a configuration from array. Documentation added. (Dirk Wenzel)
2017-04-27 5586b06 [TASK] Documentation for path configuration added. (Dirk Wenzel)
2017-04-25 6d09007 [TASK] travis-ci: use custom UnitTests.xml instead of those from testing frame work (Dirk Wenzel)
2017-04-19 0dc58ce [TASK] fix travis-ci configuration (Dirk Wenzel)